# crewai-enrichment-crew

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh  welcome.sh
scripts/: load-creds.sh
src/enrichment_crew/: crew.py  main.py  schemas.py
src/enrichment_crew/config/: agents.yaml  tasks.yaml
src/enrichment_crew/tools/: company_api_tool.py  db_tool.py  icp_tool.py  web_search_tool.py
