[project]
name = "enrichment_crew"
version = "0.1.0"
description = "enrichment_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "ddgs>=9.0",
]

[project.scripts]
enrichment_crew = "enrichment_crew.main:run"
run_crew = "enrichment_crew.main:run"
train = "enrichment_crew.main:train"
replay = "enrichment_crew.main:replay"
test = "enrichment_crew.main:test"
run_with_trigger = "enrichment_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
